--- a/20231214-TODO.md
+++ b/20231214-TODO.md
@@ -3,7 +3,9 @@
 
 2023-12-14 TODOs:  
 
-- include information on editing `mwb.yaml` to reflect your wiki  
+- include information on editing `mwb.yaml` to reflect your wiki
+- include information about editing your _footer.html if you want
+- include information about setting up the sidebar
 - run some tests on this repository and verify this documentation  
 - edit the MWB URLs to point to the current repositories  
 - remove the "Massive Wiki Themes" references and clarify how the current theming works  
