--- a/20231214-TODO.md
+++ b/20231214-TODO.md
@@ -11,3 +11,7 @@
 - remove the "Massive Wiki Themes" references and clarify how the current theming works  
 - review and update, if needed, the contents of this repo (all the READMEs)  
 
+Bonus:
+
+- document "Use as a template" to start with your own copy of this repo
+- document how to set up a Netlify site
